@@ -1,5 +1,6 @@
 2004-12-06  Sam Steingold  <sds@gnu.org>
 
+	* modules/syscalls/calls.c (OS:FILE-PROPERTIES): support cygwin
 	* modules/syscalls/posix.lisp (FILE-PROPERTIES) [win32|cygwin]: export
 	* modules/syscalls/configure.in (LIBS) [win32|cygwin]: added oleaut32
 
